Fixed issue with footer on mobile

--- a/style.css
+++ b/style.css
@@ -165,6 +165,12 @@ footer {
   text-align: center;
 }
 
+@media {
+  footer {
+    height: auto;
+  }
+}
+
 /*Wrappers and containers*/
 
 main {
